# InvoiceIntakeAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: .gitkeep  README.md
input_data/: .gitkeep
src/invoice_agent/: __init__.py  config.py  logging_setup.py
src/invoice_agent/application/: __init__.py  process_invoice.py
src/invoice_agent/domain/: __init__.py  approval.py  models.py  ports.py
src/invoice_agent/infrastructure/: __init__.py  agent.py  inbound_email.py  notifier.py  observability.py  pdf_extractor.py
src/invoice_agent/interface/: __init__.py  api.py  cli.py
tests/: conftest.py  test_api.py  test_approval.py  test_cli.py  test_config.py  test_domain_models.py  test_inbound_email.py  test_live_llm.py  test_notifier.py  test_observability.py  test_pdf_extractor.py  test_process_invoice.py
